Update Primer Disseny Web.html

--- a/Primer Disseny Web.html
+++ b/Primer Disseny Web.html
@@ -1,9 +1,167 @@
+
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="descripción" content="Buenas y fáciles recetas asequibles de Lunes a Viernes diferentes con un toque rústico">
+  <title>Menú Semanal</title>
+</head>
 <body>
+  <h1>Menú Semanal</h1>
+  <p> En esta página web explicaremos alguno de los platos que tenemos en el menú.</p>
+  <p>A continuación mostraré el menú de cada día de la semana</p>
+  <table>
+	<tr>
+		<th>Lunes</th>
+		<th>Martes</th>
+		<th>Miércoles</th>
+		<th>Jueves</th>
+		<th>Viernes</th>
+	</tr>
+	<tr>
+		<td>Sopa Hortelana </td> 
+		<td>Spaghetti Boloñesa</td>
+		<td>Puré de calabaza </td>
+		<td>Lentejas</td>
+		<td>Arroz a la cubana</td>
+	</tr>
+	<tr>
+		<td>Merluza en salsa</td>
+		<td>Solomillo de cerdo con puré de castañas</td>
+		<td>Escalope de pollo</td>
+		<td>Bacalao Glaseado</td>
+		<td>Salmón con verdura</td>
+	</tr>
+	<tr>
+		<td>Natillas</td>
+		<td>Flan</td>
+		<td>PanaCotta</td>
+		<td>Tiramisú</td>
+		<td>Gató con helado</td>
+	</tr>	
+	</table>
+	
+	<h4> Sopa Hortelana </h4>
+	<p>Ingredientes:<br/>
+		<ul>
+			<li>150gr de Puerro</li>
+			<li>200gr de Cebolla</li>
+			<li>200gr de Zanahoria</li>
+			<li>150gr de Pimiento Rojo o Verde</li>
+			<li>1L de Caldo de Pollo</li>
+			<li>Sal y Pimienta al gusto</li>
+		</ul>
+	</p>
+	<p>Elaboración:<br/>
+	Lavar y cortar todas las verduras antes de empezar a cocinar.<br/>
+	A continuación pochar la cebolla ( fuego medio ), una vez pochada<br/>
+	añadir el resto de ingredientes excepto el caldo de pollo.<br/>
+	Una vez las verduras esten echas, añadir el caldo de pollo,<br/> 
+	tapar la olla y dejar cocer alrededor de 40/45 minutos.
+	</p>
+	<p>Consejo:<br/>
+	Añadir sal y pimienta cuando el caldo este hirviendo ya que así coge más sabor<br/>
+	En caso de que hubiese poco caldo de pollo, añadir agua.
+	</p>
+	<img src= "img/sopa_hortelana.jpg" alt="Sopa">
+	<hr>
+	<h4>Solomillo de Cerdo</h4>
+	<p> Ingredientes:<br/>
+	<ul>
+		<li>180gr de Solomillo</li>
+		<li>1/2kg de Castañas</li>
+		<li>250gr de Setas</li>
+		<li>200ml de Leche</li>
+		<li>100ml de Soja</li>
+		<li>90gr de Mantequilla</li>
+		<li>Sal y Pimienta al gusto</li>
+	</ul>
+	</p>
+	<p>Elaboración:<br/>
+	Porcionar los solomillos al gusto y macerar con la soja, pimienta y sal durante 30 minutos.<br/>
+	Saltea los solomillos hasta que esten dorados, OJO sin llegar a cocer.<br/>
+	Por otra parte poner agua a hervir y cocer las castañas durante 20 minutos.<br/>
+	Una vez hervidas pélalas de esta forma eliminaremos la piel que nos aporta amargor.<br/>
+	Vierte leche en un bol, añade las castañas y pon a hervir la mantequilla( fuego lento ) para que no se queme,<br/>
+	cuando este la mantequilla fundida añadir al bol anterior e ir triturando hasta conseguir una textura cremosa.<br/>
+	Finalmente, limpia las setas y saltéalas en la sartén.
+	</p>
+	<p>Consejo:<br/>
+	Si queremos pelar rápido las castañas una vez sacadas del fuego, ponerlas en un bol con agua y hielo.<br/>
+	Para conseguir que los solomillos no cuezan, saltear a fuego fuerte y retirar.<br/>
+	<img src="img/solomillo_cerdo.jpg" alt= "Solomillo">
+	</p>
+	<hr>
+	<h4>Tiramisú</h4>
+	<p>Ingredientes:<br/>
+	<ul>
+		<li>2 Claras de huevo</li>
+		<li>4 Yemas de huevo</li>
+		<li>100gr de Azúcar</li>
+		<li>400gr de Queso Mascarpone</li>
+		<li>200gr de Bizcocho de Soletilla</li>
+		<li>175ml de Café</li>
+		<li>200gr de Chocolate negro rallado</li>
+	</ul>
+	</p>
+	<p>Elaboración:<br/>
+	Preparar una cafetera de café y dejar enfriar, después montar las claras a punto de nieve y reservar.<br/>
+	En un bol aparte batir las yemas con el azúcar, añadir el mascarpone poco a poco y batir a poca velocidad,<br/>
+	incorporar las claras e ir mezclando con una espátula realizando movimientos envolventes.<br/>
+	En un molde poner una capa de bizcocho de soletilla y empaparlo de café, lo cubrimos con una capa de mascarpone y<br/>
+	repetir el proceso una y otra vez hasta llegar arriba del molde.<br/>
+	Guardar el bizcocho en la nevera durante al menos 3 horas con la capa de chocolate rallado por encima.<br/>
+	</p>
+	<img src="img/tiramisú.jpg" alt= "Tiramisú">
+	<hr>
+	<h4>Crema de Calabaza</h4>
+	<p>Ingredientes:<br/>
+	<ul>
+		<li>900gr de Calabaza</li>
+		<li>100gr de Puerro</li>
+		<li>200gr de Patata</li>
+		<li>100gr de Cebolla</li>
+		<li>100gr de Zanahoria</li>
+		<li>50ml de Aceite</li>
+		<li>1/2L de Agua</li>
+		<li>Nuez moscada, Pimienta Negra y Sal al gusto</li>
+	</ul>
+	</p>
+	<p>Elaboración:<br/>
+	Cortar todas las verduras y sofreir bien.<br/>
+	Mientras se van sofriendo las verduras, tendremos que preparar la calabaza<br/>
+	quitando las semillas y la piel, añadir la calabaza y las patatas terminar de sofreir<br/>
+	y añadir el 1/2L de agua, dejar hervir durante 45min/1hora .<br/>
+	Cuando ya este hervido, triturar con una batidora ( o thermomix ) hasta dejarla bien fina.<br/>
+	</p>
+	<img src="img/crema_calabaza.jpg" alt = "Crema" >
+	<hr>
+	<h4> Arroz a la cubana </h4>
+	<p>Ingredientes:<br/>
+	<ul>
+		<li>200gr de Arroz</li>
+		<li>4 huevos</li>
+		<li>50gr de Mantequilla</li>
+		<li>100gr de Salchicha</li>
+		<li>100gr de Tomate Frito</li>
+	</ul>
+	</p>
+	<p>Elaboración:<br/>
+	Añadir agua en un bol con el arroz y poner a cocer a fuego medio durante 25min.<br/>
+	Realizar las salchicas en otra sarten con un poco de aceite.<br/>
+	Una vez que tenemos las salchicas y el arroz freír los huevos.<br/>
+	Finalmente añadir mantequilla y sofreir el arroz con las salchicas, poner el tomate y añadir el huevo al final.<br/>
+	<img src="img/arroz_cubana.jpg" alt = "Arroz" >
+	
+	
+	<p> Para terminar la página web dejaré de muestra una serie de enlaces a otras web's </p>
+		<ol type ="1">
+			<li><p><a href="http://www.vegetarianismo.net/recetas/"> Recetas Veganas</a></p> </li>
+			<li><p><a href="https://www.directoalpaladar.com/">Directo al Paladar</a></p></li>
+			<li><p><a href="https://www.mipielsana.com/tag/recetas-fitness/">Recetas Fitness</a></p></li>
+			
+	    </ol>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+	
 </body>
 </html>
