Update Primer Disseny Web.html

--- a/Primer Disseny Web.html
+++ b/Primer Disseny Web.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html>
+<html lang ="es">
 <head>
   <meta charset="UTF-8">
   <meta name="descripción" content="Buenas y fáciles recetas asequibles de Lunes a Viernes diferentes con un toque rústico">
@@ -42,7 +41,7 @@
 	</table>
 	
 	<h4> Sopa Hortelana </h4>
-	<p>Ingredientes:<br/>
+	<p>Ingredientes:</p><br/>
 		<ul>
 			<li>150gr de Puerro</li>
 			<li>200gr de Cebolla</li>
@@ -51,7 +50,7 @@
 			<li>1L de Caldo de Pollo</li>
 			<li>Sal y Pimienta al gusto</li>
 		</ul>
-	</p>
+
 	<p>Elaboración:<br/>
 	Lavar y cortar todas las verduras antes de empezar a cocinar.<br/>
 	A continuación pochar la cebolla ( fuego medio ), una vez pochada<br/>
@@ -66,7 +65,7 @@
 	<img src= "img/sopa_hortelana.jpg" alt="Sopa">
 	<hr>
 	<h4>Solomillo de Cerdo</h4>
-	<p> Ingredientes:<br/>
+	<p> Ingredientes:</p><br/>
 	<ul>
 		<li>180gr de Solomillo</li>
 		<li>1/2kg de Castañas</li>
@@ -76,7 +75,6 @@
 		<li>90gr de Mantequilla</li>
 		<li>Sal y Pimienta al gusto</li>
 	</ul>
-	</p>
 	<p>Elaboración:<br/>
 	Porcionar los solomillos al gusto y macerar con la soja, pimienta y sal durante 30 minutos.<br/>
 	Saltea los solomillos hasta que esten dorados, OJO sin llegar a cocer.<br/>
@@ -93,7 +91,7 @@
 	</p>
 	<hr>
 	<h4>Tiramisú</h4>
-	<p>Ingredientes:<br/>
+	<p>Ingredientes:</p><br/>
 	<ul>
 		<li>2 Claras de huevo</li>
 		<li>4 Yemas de huevo</li>
@@ -103,7 +101,7 @@
 		<li>175ml de Café</li>
 		<li>200gr de Chocolate negro rallado</li>
 	</ul>
-	</p>
+	
 	<p>Elaboración:<br/>
 	Preparar una cafetera de café y dejar enfriar, después montar las claras a punto de nieve y reservar.<br/>
 	En un bol aparte batir las yemas con el azúcar, añadir el mascarpone poco a poco y batir a poca velocidad,<br/>
@@ -115,7 +113,7 @@
 	<img src="img/tiramisú.jpg" alt= "Tiramisú">
 	<hr>
 	<h4>Crema de Calabaza</h4>
-	<p>Ingredientes:<br/>
+	<p>Ingredientes:</p><br/>
 	<ul>
 		<li>900gr de Calabaza</li>
 		<li>100gr de Puerro</li>
@@ -126,7 +124,7 @@
 		<li>1/2L de Agua</li>
 		<li>Nuez moscada, Pimienta Negra y Sal al gusto</li>
 	</ul>
-	</p>
+	
 	<p>Elaboración:<br/>
 	Cortar todas las verduras y sofreir bien.<br/>
 	Mientras se van sofriendo las verduras, tendremos que preparar la calabaza<br/>
@@ -137,7 +135,7 @@
 	<img src="img/crema_calabaza.jpg" alt = "Crema" >
 	<hr>
 	<h4> Arroz a la cubana </h4>
-	<p>Ingredientes:<br/>
+	<p>Ingredientes:</p><br/>
 	<ul>
 		<li>200gr de Arroz</li>
 		<li>4 huevos</li>
@@ -145,7 +143,7 @@
 		<li>100gr de Salchicha</li>
 		<li>100gr de Tomate Frito</li>
 	</ul>
-	</p>
+	
 	<p>Elaboración:<br/>
 	Añadir agua en un bol con el arroz y poner a cocer a fuego medio durante 25min.<br/>
 	Realizar las salchicas en otra sarten con un poco de aceite.<br/>
